# bevy_snap

./: Cargo.toml  LICENSE  README.md
dummy_game/: dummy_game.rs
examples/: basic.rs
src/: commands.rs  lib.rs  reflect_resource.rs  rollback_id_provider.rs  snapshot_id_provider.rs  world_snapshot.rs
