[package]
name = "bevy_snap"
version = "0.2.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Saving and loading of component and resource snapshots for bevy"
keywords = ["gamedev"]
categories = ["game-development"]
repository = "https://github.com/johanhelsing/bevy_snap"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.7", default-features = false }

[dev-dependencies]
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit"] }
